--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <!-- PAGE HEADER HTML SETUP -->
-    <load src="partials/home-page-header.html">
+    <load src="partials/home-page-header.html" />
 
     <!-- Loads the specified .html file -->
     
