--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="uk">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/src/public/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./public/favicon-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>МІМІНО</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
