--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="uk">
   <head>
     <meta charset="UTF-8" />
-
+    <link rel="icon" href="./public/favicon-32x32.png" sizes="32x32" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>МІМІНО</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,6 +16,9 @@
   <body>
     <!-- PAGE HEADER HTML SETUP -->
     <load src="partials/home-page-header.html" />
+
+
+    <load src="partials/home-page-footer.html" />
 
     <!-- Loads the specified .html file -->
     <!-- <script type="module" src="/main.js"></script> -->
