--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <load src="partials/home-page-header.html" />
 
 
-    <load src="partials/home-page-footer.html" />
+    <!-- <load src="partials/home-page-footer.html" /> -->
 
     <!-- Loads the specified .html file -->
     <!-- <script type="module" src="/main.js"></script> -->
