--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,10 @@
   <body>
     <!-- PAGE HEADER HTML SETUP -->
     <load src="partials/home-page-header.html" />
+    <load src="partials/home-page-hero.html" />
 
 
-    <!-- <load src="partials/home-page-footer.html" /> -->
+    <load src="partials/home-page-footer.html" />
 
     <!-- Loads the specified .html file -->
     <!-- <script type="module" src="/main.js"></script> -->
