--- a/src/restaurant.html
+++ b/src/restaurant.html
@@ -16,6 +16,7 @@
 
 <body>
   <load src="partials/home-page-header.html" />
+  <load src="partials/home-page-hero.html" />
   
 
   <script type="module" src="/main.js"></script>
