add rest section 2

--- a/src/restaurant.html
+++ b/src/restaurant.html
@@ -17,6 +17,9 @@
 <body>
   <load src="partials/home-page-header.html" />
   <load src="partials/home-page-hero.html" />
+  <load scr="partials/rest-page-section2.html" />
+
+  <load src="partials/home-page-footer.html" />
   
 
   <script type="module" src="/main.js"></script>
