--- a/src/hotel.html
+++ b/src/hotel.html
@@ -16,6 +16,10 @@
 
 <body>
   <load src="partials/home-page-header.html" />
+  <load src="partials/home-page-hero.html" />
+
+  <load src="partials/home-page-footer.html" />
+
 
 
   <script type="module" src="/main.js"></script>
