--- a/src/hotel.html
+++ b/src/hotel.html
@@ -16,7 +16,7 @@
 
 <body>
   <load src="partials/home-page-header.html" />
-  <load src="partials/home-page-hero.html" />
+  <load src="partials/hotel-page-hero.html" />
 
   <load src="partials/home-page-footer.html" />
 
