--- a/src/restaurant.html
+++ b/src/restaurant.html
@@ -16,7 +16,7 @@
 
 <body>
   <load src="partials/home-page-header.html" />
-  <load src="partials/home-page-hero.html" />
+  <load src="partials/rest-page-hero.html" />
   <load scr="partials/rest-page-section2.html" />
 
   <load src="partials/home-page-footer.html" />
