--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
     <load src="partials/home-page-hero.html" />
 
     <load src="partials/home-page-footer.html" />
-    <load src="partials/location.html" />
+    <includes src="partials/location.html" />
 
     <!-- Loads the specified .html file -->
     <!-- <script type="module" src="/main.js"></script> -->
