--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,8 @@
   <load src="partials/home-page-header.html" />
   <load src="partials/home-page-hero.html" />
 
+  <load src="partials/home-page-section5.html" />
+
   <load src="partials/home-page-footer.html" />
 
 
