--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,12 @@
 
   <load src="partials/home-page-footer.html" />
 
+  <load src="./modal/table-modal.html" />
+  <load src="./modal/room-modal.html" />  
 
   
+  <script type="module" src="./modal/js/modal.js"></script>
+  <script type="module" src="./modal/js/room.js"></script>
   <script type="module" src="/main.js"></script>
 </body>
 
