--- a/src/restaurant.html
+++ b/src/restaurant.html
@@ -20,8 +20,10 @@
   <load scr="partials/rest-page-section2.html" />
 
   <load src="partials/home-page-footer.html" />
-  
 
+  <load src="./modal/table-modal.html" />
+  
+  <script type="module" src="./modal/js/modal.js"></script>
   <script type="module" src="/main.js"></script>
 </body>
 
