--- a/src/room.html
+++ b/src/room.html
@@ -3,18 +3,21 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="icon" href="./public/favicon-32x32.png" sizes="32x32" type="image/png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MIMINO</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
-  <link rel="stylesheet" href="./css/styles.css" />
+  <link rel="stylesheet" href="./css/reset.css" />
+  <link rel="stylesheet" href="./css/room.css">
 </head>
 
 <body>
 
+  <load src="partials/room-page-header.html" />
+  <load src="partials/room-page-hero.html" />
 
   <script type="module" src="/main.js"></script>
 </body>
