--- a/src/modal/room-modal.html
+++ b/src/modal/room-modal.html
@@ -4,7 +4,7 @@
   <div class="tt-modal">
     <button type="button" class="modal-close" data-room-close>
       <svg class="close-modal-icon" width="24" height="24">
-        <use href="../img/icons-sprite.svg#icon-cross-close-modal"></use>
+        <use href="./img/icons-sprite.svg#icon-cross-close-modal"></use>
       </svg>
     </button>
 
