--- a/src/modal/table-modal.html
+++ b/src/modal/table-modal.html
@@ -5,7 +5,7 @@
 
     <button type="button" class="modal-close" data-modal-close>
       <svg class="close-modal-icon" width="24" height="24">
-        <use href="../img/icons-sprite.svg#icon-cross-close-modal"></use>
+        <use href="./img/icons-sprite.svg#icon-cross-close-modal"></use>
       </svg>
     </button>
 
