--- a/src/hotel.html
+++ b/src/hotel.html
@@ -20,8 +20,11 @@
 
   <load src="partials/home-page-footer.html" />
 
+  <load src="./modal/room-modal.html" />
+  <load src="./modal/price-modal.html" />
 
-
+  <script type="module" src="./modal/js/room.js"></script>
+  <script type="module" src="./modal/js/price.js"></script>
   <script type="module" src="/main.js"></script>
 </body>
 
