--- a/src/restaurant.html
+++ b/src/restaurant.html
@@ -24,6 +24,7 @@
   <load src="./modal/table-modal.html" />
   
   <script type="module" src="./modal/js/modal.js"></script>
+  <script type="module" src="./modal/js/table-modal-two.js"></script>
   <script type="module" src="/main.js"></script>
 </body>
 
