--- a/src/modal/table-modal.html
+++ b/src/modal/table-modal.html
@@ -3,7 +3,7 @@
 <div class="backdrop is-hidden" data-modal>
   <div class="tt-modal">
 
-    <button type="button" class="modal-close" data-modal-close, data-modal-close-two>
+    <button type="button" class="modal-close" data-modal-close>
       <svg class="close-modal-icon" width="24" height="24">
         <use href="./img/icons-sprite.svg#icon-cross-close-modal"></use>
       </svg>
