--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
   <load src="./modal/table-modal.html" />
   <load src="./modal/room-modal.html" />  
 
+  <a href="./room.html">ПОСИЛАННЯ НА СТОРІНКУ НОМЕРУ</a>
   
   <script type="module" src="./modal/js/modal.js"></script>
   <script type="module" src="./modal/js/room.js"></script>
