--- a/src/room.html
+++ b/src/room.html
@@ -18,6 +18,7 @@
 
   <load src="partials/room-page-header.html" />
   <load src="partials/room-page-hero.html" />
+  <load src="partials/room-page-section1.html" />
 
   <script type="module" src="/main.js"></script>
 </body>
