--- a/src/room.html
+++ b/src/room.html
@@ -20,6 +20,11 @@
   <load src="partials/room-page-hero.html" />
   <load src="partials/room-page-section1.html" />
 
+  <load src="./modal/price-modal.html" />
+  <load src="./modal/room-modal.html" />
+
+  <script type="module" src="./modal/js/price.js"></script>
+  <script type="module" src="./modal/js/room.js"></script>
   <script type="module" src="/main.js"></script>
 </body>
 
