--- a/src/room.html
+++ b/src/room.html
@@ -19,6 +19,8 @@
   <load src="partials/room-page-header.html" />
   <load src="partials/room-page-hero.html" />
   <load src="partials/room-page-section1.html" />
+  <load src="partials/home-page-footer.html">
+
 
   <load src="./modal/price-modal.html" />
   <load src="./modal/room-modal.html" />
