--- a/src/hotel.html
+++ b/src/hotel.html
@@ -25,7 +25,7 @@
 
   <script type="module" src="./modal/js/room.js"></script>
   <script type="module" src="./modal/js/price.js"></script>
-  <script type="module" src="/main.js"></script>
+  <!-- <script type="module" src="/main.js"></script> -->
 </body>
 
 </html>
