--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,8 @@
 <body>
   <load src="partials/home-page-header.html" />
   <load src="partials/home-page-hero.html" />
-
+  <load src="partials/home-page-section1.html" />
+  <load src="partials/home-page-section2.html" />
   <load src="partials/home-page-section3.html" />
 
   <load src="partials/home-page-section5.html" />
@@ -27,7 +28,6 @@
   <load src="./modal/table-modal.html" />
   <load src="./modal/room-modal.html" />  
 
-  <a href="./room.html">ПОСИЛАННЯ НА СТОРІНКУ НОМЕРУ</a>
   
   <script type="module" src="./modal/js/modal.js"></script>
   <script type="module" src="./modal/js/room.js"></script>
