--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
   <load src="partials/home-page-section1.html" />
   <load src="partials/home-page-section2.html" />
   <load src="partials/home-page-section3.html" />
+  <load src="partials/home-page-section4.html" />
 
   <load src="partials/home-page-section5.html" />
 
