--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
   
   <script type="module" src="./modal/js/modal.js"></script>
   <script type="module" src="./modal/js/room.js"></script>
+  <script type="module" src="./modal/js/table-modal-two.js"></script>
   <script type="module" src="/main.js"></script>
 </body>
 
