--- a/src/hotel.html
+++ b/src/hotel.html
@@ -17,7 +17,7 @@
 <body>
   <load src="partials/home-page-header.html" />
   <load src="partials/hotel-page-hero.html" />
-  <load src="partials/hotel-page-section1.html" />
+  <!-- <load src="partials/hotel-page-section1.html" /> -->
   <load src="partials/home-page-footer.html" />
 
   <load src="./modal/room-modal.html" />
