--- a/src/hotel.html
+++ b/src/hotel.html
@@ -27,7 +27,8 @@
 
   <script type="module" src="./modal/js/room.js"></script>
   <script type="module" src="./modal/js/price.js"></script>
-  <script type=module src="./modal/js/room-price-section1.js"></script>
+  <script type="module" src="./modal/js/room-price-section1.js"></script>
+  <script type="module" src="./modal/js/room-price-section3.js"></script>
   <!-- <script type="module" src="/main.js"></script> -->
 </body>
 
