--- a/src/hotel.html
+++ b/src/hotel.html
@@ -18,7 +18,7 @@
   <load src="partials/home-page-header.html" />
   <load src="partials/hotel-page-hero.html" />
   <load src="partials/hotel-page-section1.html" />
-
+  <load src="partials/hotel-page-section2.html" />
   <load src="partials/hotel-page-section3.html" />
   <load src="partials/home-page-footer.html" />
 
