--- a/src/hotel.html
+++ b/src/hotel.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <load src="partials/home-page-header.html" />
+  <load src="partials/page-header.html" />
   <load src="partials/hotel-page-hero.html" />
   <load src="partials/hotel-page-section1.html" />
   <load src="partials/hotel-page-section2.html" />
