--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <load src="partials/home-page-header.html" />
+  <load src="partials/page-header.html" />
 
   <load src="partials/home-page-hero.html" />
 
